docs/api/qiskit/0.19/qiskit.aqua.components.feature_maps.RawFeatureVector.mdx
---
title: RawFeatureVector (v0.19)
description: API reference for qiskit.aqua.components.feature_maps.RawFeatureVector in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.components.feature_maps.RawFeatureVector
---

# RawFeatureVector

<Class id="qiskit.aqua.components.feature_maps.RawFeatureVector" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/components/feature_maps/raw_feature_vector.py" signature="RawFeatureVector(feature_dimension=2)" modifiers="class">
  Raw Feature Vector feature map.

  The Raw Feature Vector can be directly used as a feature map, where the raw feature vectors will be automatically padded with ending 0s as necessary, to make sure vector length is a power of 2, and normalized such that it can be treated and used as an initial quantum state vector.

  **Parameters**

  **feature\_dimension** (`int`) – The feature dimension, has a minimum value of 1.

  ## Attributes

  <span id="rawfeaturevector-feature-dimension" />

  ### feature\_dimension

  <Attribute id="qiskit.aqua.components.feature_maps.RawFeatureVector.feature_dimension">
    returns feature dimension
  </Attribute>

  <span id="rawfeaturevector-num-qubits" />

  ### num\_qubits

  <Attribute id="qiskit.aqua.components.feature_maps.RawFeatureVector.num_qubits">
    returns number of qubits
  </Attribute>

  <span id="rawfeaturevector-support-parameterized-circuit" />

  ### support\_parameterized\_circuit

  <Attribute id="qiskit.aqua.components.feature_maps.RawFeatureVector.support_parameterized_circuit">
    returns whether or not the sub-class support parameterized circuit
  </Attribute>

  ## Methods

  <span id="rawfeaturevector-construct-circuit" />

  ### construct\_circuit

  <Function id="qiskit.aqua.components.feature_maps.RawFeatureVector.construct_circuit" signature="RawFeatureVector.construct_circuit(x, qr=None, inverse=False)">
    Construct the second order expansion based on given data.

    **Parameters**

    *   **x** (*numpy.ndarray*) – 1-D to-be-encoded data.
    *   **qr** ([*QuantumRegister*](qiskit.circuit.QuantumRegister "qiskit.circuit.QuantumRegister")) – the QuantumRegister object for the circuit, if None, generate new registers with name q.
    *   **inverse** (*bool*) – inverse

    **Returns**

    a quantum circuit transform data x.

    **Return type**

    [QuantumCircuit](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")

    **Raises**

    *   **TypeError** – invalid input
    *   **ValueError** – invalid input
  </Function>

  <span id="rawfeaturevector-get-entangler-map" />

  ### get\_entangler\_map

  <Function id="qiskit.aqua.components.feature_maps.RawFeatureVector.get_entangler_map" signature="RawFeatureVector.get_entangler_map(map_type, num_qubits)" modifiers="static">
    get entangle map
  </Function>

  <span id="rawfeaturevector-validate-entangler-map" />

  ### validate\_entangler\_map

  <Function id="qiskit.aqua.components.feature_maps.RawFeatureVector.validate_entangler_map" signature="RawFeatureVector.validate_entangler_map(entangler_map, num_qubits)" modifiers="static">
    validate entangler map
  </Function>
</Class>

